Speed improvements and schema path type safety
Several changes here in the name of improving read speed
- Use field_id instead of name when traversing schema structures
- Use sparsely populated arrays instead of HashMaps for integer lookups
- Use BitSet instead of Set<Integer> in several places
- Shortcut matcher implementations if ParquetPredicate.All is detected

Because we've changed the schema arguments in a bunch of places, we'll bump the version for this one